# bsa-gprime

./: Cargo.toml  Cross.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: environment.yml  visualize_qtl.py
src/: csv_reader.rs  lib.rs  main.rs  output.rs  peaks.rs  significance.rs  smoothing.rs  statistics.rs  types.rs  vcf_parser.rs
src/plotting/: delta_snp_index.rs  downsample.rs  faceted.rs  gprime.rs  manhattan.rs  mod.rs
